--- a/pug/cards/_card-calendar.pug
+++ b/pug/cards/_card-calendar.pug
@@ -1,4 +1,15 @@
-.card.card-calendar
+.card
+	.content-title
+		.content-subtitle.margin-top-10
+			h2
+				| Ноябрь,
+				span  2018
+		.content-subtitle.content-subtitle_right
+			h3
+				span < Сегодня: 20 Ноября >
+	#pageCalendar.card-calendar
+
+//.card.card-calendar.hide
 	.content-title
 		.content-subtitle.margin-top-10
 			h2
