--- a/css/style.css
+++ b/css/style.css
@@ -1423,6 +1423,11 @@ h2 span,
   font-size: 12px;
 }
 
+.link-deafult {
+  color: #008acc;
+  text-decoration: underline;
+}
+
 .link-icon {
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
@@ -6265,6 +6270,10 @@ h2 span,
   padding-bottom: 100px;
 }
 
+.comment-form_p0 {
+  padding: 0;
+}
+
 .comment-form-reply {
   padding-bottom: 15px;
 }
@@ -7893,6 +7902,10 @@ h2 span,
 
   .link:hover {
     color: #484a4d;
+  }
+
+  .link-deafult:hover {
+    text-decoration: none;
   }
 
   .link-icon:hover {
