--- a/sass/general/_buttons.scss
+++ b/sass/general/_buttons.scss
@@ -22,6 +22,13 @@
 			overflow: hidden;
 		}
 	}
+	&-deafult {
+		color: #008acc;
+		text-decoration: underline;
+		@include hover {
+			text-decoration: none;
+		}
+	}
 	&-icon {
 		transition: 0.3s;
 		@include hover {
