--- a/pug/ads.pug
+++ b/pug/ads.pug
@@ -31,6 +31,8 @@ block vars
 			.col-12.col-sm-9
 				.card
 					.card__text.fix-height-135.text-ddd-135
+						p <strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;
+							a.link-deafult(href="mailto:/contact@omk.ru") contact@omk.ru
 						p
 							| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
 						p
