--- a/pug/widgets/_widget-calendar.pug
+++ b/pug/widgets/_widget-calendar.pug
@@ -1,94 +1,10 @@
 // widget widget-calendar
-#calendarwidgetBox.widget-box.widget-calendar
+.widget-calendar.widget-box
 	a.widget-title.widget-title_link(href="/calendar.html")
-		| КАЛЕНДАРЬ СОБЫТИЙ 
+		| КАЛЕНДАРЬ СОБЫТИЙ
 		button.event-control
 			i.icon-arrow-down
-	.widget-subtitle
-		span Сегодня 20 ноября 2018
-	.ui-datepicker-inline.ui-datepicker.ui-widget.ui-widget-content.ui-helper-clearfix.ui-corner-all
-		table.ui-datepicker-calendar
-			tbody
-				tr
-					td
-						a.ui-state-deafult.ui-state-week(href="#") 01
-					td.ui-datepicker-other-month.ui-datepicker-unselectable.ui-state-disabled  
-					td.ui-datepicker-other-month.ui-datepicker-unselectable.ui-state-disabled  
-					td.ui-datepicker-other-month.ui-datepicker-unselectable.ui-state-disabled  
-					td.first-of-month
-						a.ui-state-default(href="#") 1
-					td
-						a.ui-state-default(href="#") 2
-					td.ui-datepicker-week-end
-						a.ui-state-default(href="#") 3
-					td.ui-datepicker-week-end
-						a.ui-state-default(href="#") 4
-				tr
-					td
-						a.ui-state-deafult.ui-state-week(href="#") 02
-					td
-						a.ui-state-default(href="#") 5
-					td
-						a.ui-state-default.ui-state-active(href="#event-6") 6
-					td
-						a.ui-state-default(href="#") 7
-					td
-						a.ui-state-default(href="#") 8
-					td
-						a.ui-state-default(href="#") 9
-					td.ui-datepicker-week-end
-						a.ui-state-default(href="#") 10
-					td.ui-datepicker-week-end.selected
-						a.ui-state-default(href="#event-11") 11
-				tr
-					td
-						a.ui-state-deafult.ui-state-week(href="#") 03
-					td
-						a.ui-state-default(href="#") 12
-					td
-						a.ui-state-default(href="#") 13
-					td
-						a.ui-state-default.ui-state-active(href="#event-14") 14
-					td
-						a.ui-state-default(href="#") 15
-					td
-						a.ui-state-default(href="#") 16
-					td.ui-datepicker-week-end
-						a.ui-state-default(href="#") 17
-					td.ui-datepicker-week-end
-						a.ui-state-default(href="#") 18
-				tr
-					td
-						a.ui-state-deafult.ui-state-week(href="#") 04
-					td
-						a.ui-state-default(href="#") 19
-					td.ui-datepicker-today.selected
-						a.ui-state-default.ui-state-active(href="#event-20") 20
-					td
-						a.ui-state-default(href="#") 21
-					td
-						a.ui-state-default(href="#") 22
-					td
-						a.ui-state-default(href="#") 23
-					td.ui-datepicker-week-end.selected
-						a.ui-state-default.ui-state-active(href="#event-24") 24
-					td.ui-datepicker-week-end.selected.ui-datepicker-current-day
-						a.ui-state-default(href="#") 25
-				tr
-					td
-						a.ui-state-deafult.ui-state-week(href="#") 05
-					td
-						a.ui-state-default(href="#") 26
-					td
-						a.ui-state-default(href="#") 27
-					td
-						a.ui-state-default(href="#") 28
-					td
-						a.ui-state-default(href="#") 29
-					td.last-of-month
-						a.ui-state-default(href="#") 30
-					td.ui-datepicker-week-end.ui-datepicker-other-month.ui-datepicker-unselectable.ui-state-disabled  
-					td.ui-datepicker-week-end.ui-datepicker-other-month.ui-datepicker-unselectable.ui-state-disabled  
+	#widgetCalendar
 	#event-6.events
 		a.event.calendar-lnk(href="calendar.html#events-06-10-2018")
 			.event-title
@@ -96,7 +12,7 @@
 			.widget-imgbox.widget-imgbox_calendar(style="background-image: url(img/article-img-01.jpg);")
 		a.event.calendar-lnk(href="calendar.html#event2-06-10-2018")
 			.event-title
-				span День поедателей йогуртов
+				span День поедателей йогуртов День поедателей йогуртов
 			.widget-imgbox.widget-imgbox_calendar(style="background-image: url(img/article-img-01.jpg);")
 		a.event.calendar-lnk(href="calendar.html#event3-06-10-2018")
 			.event-title
@@ -125,3 +41,4 @@
 			.event-title
 				span День поедателей йогуртов
 			.widget-imgbox.widget-imgbox_calendar(style="background-image: url(img/article-img-05.jpg);")
+
