--- a/pug/calendar.pug
+++ b/pug/calendar.pug
@@ -4,7 +4,7 @@ block vars
 block content
 	- var eventDate = '6 Ноября 2018';
 
-	include page/_page-head
+	//include page/_page-head
 
 	include cards/_card-calendar
 
