--- a/sass/_card-calendar.scss
+++ b/sass/_card-calendar.scss
@@ -5,9 +5,65 @@
 	border-spacing: 0px;
 	.ui-datepicker {
 		width: 100%;
+		padding: 0;
 	}
 	.ui-datepicker-header {
-		display: none !important;
+		//display: none !important;
+		padding: 0;
+		h3 {
+			position: relative;
+		}
+		.content-subtitle {
+			@include xs-block {
+				margin-bottom: 5px;
+			}
+			h2 {
+				@include xs-block {
+					font-size: 9px;
+					margin-bottom: 0;
+				}
+
+			}
+		}
+		.ui-datepicker-title {
+			display: inline;
+			margin: 0;
+			padding: 0 15px;
+			text-align: center;
+			font-size: 0;
+			* {
+				font-size: 16px;
+				@include lg-block {
+					font-size: 12px;
+				}
+				@include sm-block {
+					font-size: 9px;
+				}
+				@include xs-block {
+					font-size: 8px;
+				}
+			}
+			.ui-datepicker-month, .ui-datepicker-year {
+				display: none;
+			}
+		}
+		.ui-datepicker-next {
+			//position: static;
+			display: inline;
+			width: auto;
+			height: auto;
+			top: 50%;
+			transform: translateY(-50%);
+			color: #bcbdc0;
+		}
+		.ui-datepicker-prev {
+			display: inline;
+			width: auto;
+			height: auto;
+			top: 50%;
+			transform: translateY(-50%);
+			color: #bcbdc0;
+		}
 	}
 	thead {
 		display: block;
@@ -16,13 +72,20 @@
 			width: 100%;
 			th {
 				margin-bottom: 5px;
+				padding: 0;
 				display: block;
 				width: calc(100% / 7);
 				color: $dark-color;
 				font-size: 14px;
 				font-weight: 300;
-				line-height: 17px;
+				line-height: 1.4;
 				text-align: right;
+				@include md-block {
+					font-size: 10px;
+				}
+				@include xs-block {
+					font-size: 8px;
+				}
 			}
 		}
 	}
@@ -41,7 +104,8 @@
 		}
 	}
 	 td {
-		display: block;
+		display: flex;
+		flex-direction: column;
 		width: calc(100% / 7);
 		min-height: 124px;
 		padding: 11px 9px;
@@ -50,13 +114,27 @@
 		text-align: right;
 		border-right: 1px solid #bcbdc0;
 		color: $dark-color;
+		 @include lg-block {
+			 min-height: 100px;
+			 padding: 2px 6px 6px;
+		 }
+		 @include md-block {
+			 font-size: 29px;
+			 min-height: 75px;
+			 padding: 6px;
+		 }
+		 @include xs-block {
+			 font-size: 20px;
+			 padding: 0 4px;
+			 min-height: 40px;
+		 }
 		&:last-child {
 			border-right: 0;
 		}
 		a, div {
 			display: flex;
 			flex-direction: column;
-			height: 100%;
+			//height: 100%;
 			padding: 0;
 			color: inherit;
 			p {
@@ -69,10 +147,17 @@
 				color: inherit;
 			}
 		}
-		 &.card-calendar__event {
-			 font-weight: 700;
-			 color: inherit;
-		 }
+		a {
+			cursor: default;
+		}
+		&.card-calendar__event {
+		 font-weight: 700;
+		 color: inherit;
+		 cursor: pointer;
+			a {
+				cursor: pointer;
+			}
+		}
 	}
 	td {
 		@include hover {
@@ -86,7 +171,10 @@
 			color: $special-color;
 		}
 	}
-	.ui-datepicker-today {
+	td.ui-datepicker-week-end {
+		background-color: #f4f5f5;
+	}
+	td.ui-datepicker-today {
 		background-color: rgba($special-color, 0.1);
 		color: $thin-color;
 		font-weight: 700;
@@ -95,9 +183,7 @@
 			font-weight: 700;
 		}
 	}
-	td.ui-datepicker-week-end {
-		background-color: #f4f5f5;
-	}
+
 
 	&__caption {
 		display: block;
@@ -108,5 +194,12 @@
 		color: #bcbdc0;
 		font-size: 12px;
 		font-weight: 300;
+		@include md-block {
+			font-size: 8px;
+		}
+		@include xs-block {
+			padding: 0 0 2px 0 !important;
+			font-size: 6px;
+		}
 	}
 }
