--- a/sass/general/_deafult.scss
+++ b/sass/general/_deafult.scss
@@ -230,11 +230,17 @@ h6, .h6,
 	font-family: Roboto serif;
 	font-size: 16px;
 	font-weight: 400;
+	@include md-block {
+		font-size: 12px;
+	}
 	&__link {
 		vertical-align: middle;
 		font-size: 14px;
 		color: #a5a6aa;
 		transition: 0.3s;
+		@include md-block {
+			font-size: 10px;
+		}
 		&:first-child {
 			margin-left: 5px;
 		}
